--- a/index.html
+++ b/index.html
@@ -10,7 +10,24 @@
 
   <!-- غير الصورة المصغرة -->
   <link rel="icon" type="image/x-icon" href="favicon.ico"> 
+<!-- Primary Meta Tags -->
+<title>Regístrate ahora</title>
+<meta name="title" content="Regístrate ahora">
+<meta name="description" content="www.facebook.com">
 
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://los-colores-cambiann.github.io/">
+<meta property="og:title" content="Regístrate ahora">
+<meta property="og:description" content="www.facebook.com">
+<meta property="og:image" content="رابط الصورة">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://los-colores-cambiann.github.io/">
+<meta property="twitter:title" content="Regístrate ahora">
+<meta property="twitter:description" content="www.facebook.com">
+<meta property="twitter:image" content="رابط الصورة">
 
   <!-- ضع العنوان الخاص بك هنا  -->
   <title> غير هذا النص </title> 
